--- a/rps/index.html
+++ b/rps/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="buttons"> 
+        <button id="Rock">Rock</button>
+        <button id="Paper">Paper</button>
+        <button id="Scissors">Scissors</button>
+    </div>
+
+    <div class="result_score"> 
+        <span id="scores"> Running score </span>
+    </div>
+
+    <div class="result"> 
+        <span id="text"> First person to win 5 games win. </span>
+    </div>
 </body>
 </html>
